--- a/gastrointestinal.html
+++ b/gastrointestinal.html
@@ -5,39 +5,140 @@
 <body>
 <h1>Gastrointestinal System and Nutritional Health</h1>
 <br>
-Jaundice
+  <b>Jaundice</b>
 <br>
-Ascites
+  <b>Ascites</b>
 <Br>
-Anorexia
+  <b>Anorexia</b>
 <br>
-Nausea, Vomiting, and Hematemesis
+  <b>Nausea, Vomiting, and Hematemesis</b>
 <br>
-Disorders of Bowel Frequency and Evacuation
+  <b>Disorders of Bowel Frequency and Evacuation</b>
 <br>
-Abdominal Pain
+  <b>Abdominal Pain</b>
 <br>
-Abdominal, Gastrointestinal, and GI Tract Masses, Cancers, and Organomegaly
+  <b>Abdominal, Gastrointestinal, and GI Tract Masses, Cancers, and Organomegaly</b>
 <br>
-Melena/Hematochezia/Anorectal Rectal Bleeding and Pain
+  <b>Melena/Hematochezia/Anorectal Rectal Bleeding and Pain</b>
 <br>
-Heartburn and Reflux
+  <b>Heartburn and Reflux</b>
 <br>
-Oropharyngeal and Dental Pain and Lesions
+  <b>Oropharyngeal and Dental Pain and Lesions</b>
 <br>
-Issues of Weight
+  <b>Issues of Weight</b>
 <br>
-Abdominal Trauma
+  <b>Abdominal Trauma</b>
 <br>
-Dysphagia and Odynophagia
+  <b>Dysphagia and Odynophagia</b>
 <br>
-Foreign Body in Gastrointestinal Tract
+  <b>Foreign Body in Gastrointestinal Tract</b>
 <br>
-Abdominal Wall Abnormalities
+  <b>Abdominal Wall Abnormalities</b>
 <br>
-Physical Exam Findings Related to the Gastrointestinal System and Nutritional Health
+  <b>Physical Exam Findings Related to the Gastrointestinal System and Nutritional Health</b>
 <br>
-Laboratory Test Findings and Diagnostic Imaging Related to the Gastrointestinal System and Nutritional Health
+<b>Laboratory Test Findings and Diagnostic Imaging Related to the Gastrointestinal System and Nutritional Health</b>
 <br>
+  <h2>Normal Processes</h2><br>
+<b>Embryonic development, fetal maturation, and perinatal changes<b><br>
+  <b>Organ structure and function</b><br>
+<i>anatomy of the alimentary canal, including mouth, pharynx, esophagus, stomach, small
+  intestine, large intestine, anus, peritoneal cavity</i><br>
+<i>liver and biliary system, including enterohepatic circulation
+  salivary glands and exocrine pancreas</i><br>
+  <i>gastrointestinal motility, including defecation digestion and absorption</i><br>
+  <b>Cell/tissue structure and function</b><br>
+<i>endocrine and neural regulatory functions, including GI hormones (eg, gastrin)
+salivary, gastrointestinal, pancreatic, hepatic secretory products, including enzymes,
+  proteins, bile salts, and processes</i><br>
+  <i>synthetic and metabolic functions of hepatocytes</i><br>
+  <b>Repair, regeneration, and changes associated with stage of life</b><br>
+  <b>Gastrointestinal defense mechanisms and normal flora</b><br>
+<h2>Abnormal Processes: Health and Health Maintenance, Screening, Diagnosis, Management, Risks, Prognosis</h2><br>
+  <h3>Infectious, immunologic, and inflammatory disorders</h3><br>
+  <b>Infectious disorders</b><br>
+<i>bacterial: pseudomembranous colitis (Clostridium difficile); enteritis/enteric infections
+(includes gastroenteritis) (eg, Staphylococcus aureus, Escherichia coli, Listeria
+monocytogenes, Yersinia enterocolitica, Campylobacter species, Vibrio cholerae,
+Salmonella species, Shigella species, traveler's/infectious diarrhea); hepatic
+abscess, subhepatic abscess, subphrenic abscess; peritonitis, primary and
+  secondary; Whipple disease</i><br>
+  <i>viral: infectious esophagitis (eg, CMV, herpes); hepatitis A, B, C, D, E; coxsackievirus
+enteritis/colitis; Echovirus enteritis/colitis; rotavirus enteritis; mumps;
+    gingivostomatitis, herpetic</i><br>
+  <i>fungal: thrush</i><br>
+<i>parasitic: Cryptosporidium, Cyclospora, Entamoeba histolytica, Giardia, Isospora belli,
+  Strongyloides stercoralis</i><br>
+  <b>immunologic and inflammatory disorders</b>
+  <i>autoimmune hepatitis; celiac disease;
+eosinophilic esophagitis; granulomatous enteritis; inflammatory bowel disease,
+including Crohn disease, regional enteritis, microscopic colitis (collagenous and
+    lymphocytic colitis), ulcerative colitis, toxic megacolon</i><br>
+  <b>Neoplasms</b>
+<i>benign neoplasms, including polyps, cysts: stomach; small intestine; colon, rectum, and
+  anus, including polyps</i>
+<i>malignant neoplasms and pre-malignant conditions: oral cancer (eg, lips, mouth, tongue,
+salivary glands); esophageal, squamous and adenocarcinoma; Barrett esophagus;
+gastrinoma, Zollinger-Ellison syndrome; gastrointestinal carcinoid tumors;
+gastrointestinal stromal tumors; small intestine; stomach, adenocarcinoma,
+lymphoma, MALT; colon, rectum, anus; hereditary colon cancer syndromes, familial
+adenomatous polyposis (eg, Peutz-Jeghers syndrome, Gardner syndrome, Turcot
+syndrome, ); MUTYH-associated polyposis; gallbladder, cholangiocarcinoma,
+adenocarcinoma of the ampulla of Vater; liver, including hepatoma; peritoneal
+  cancer, including metastatic studding with cancer; pancreas</i><br>
+  <b>metastatic neoplasms</b><br>
+  <b>Signs, symptoms, and ill-defined disorders</b><br>
+  <i>upper gastrointestinal bleeding; lower
+gastrointestinal bleeding; constipation; diarrhea; hematochezia; bright red rectal
+    bleeding; melena; nausea, vomiting, rumination</i><br>
+  <b>Disorders of the oral cavity, salivary glands, and esophagus</b><br>
+<i>oral cavity and salivary glands: abscessed tooth; dental caries; malocclusion;
+disorders of the salivary glands (eg, stones, sialadenitis, parotitis)
+esophagus: achalasia and cardiospasm; dysphagia; diverticulum (eg, Zenker);
+esophageal periapical abscess without sinus; esophagitis/esophageal reflux
+(GERD); esophagitis, pill; Mallory-Weiss syndrome; paraesophageal (hiatal) hernia; 
+  stricture and stenosis of esophagus</i><br>
+  <b>Disorders of the stomach, small intestine, colon, rectum, anus</b><br>
+<i>stomach: dyspepsia/hyperacidity; gastric ulcer; gastritis; peptic ulcer; peptic ulcer
+  perforation; gastroparesis</i><br>
+<i>small intestine, colon: appendicitis; angiodysplasia; diverticula, diverticulitis,
+diverticulosis; duodenitis, duodenal ulcer, peptic ulcer; gastroenteritis and colitis
+(noninfectious); granulomatous enterocolitis; Hirschsprung disease; impaction of
+intestine; intestinal obstruction/stricture; intussusception; irritable colon/irritable
+bowel syndrome; mesenteric ischemia/ischemic bowel/ischemic colitis; necrotizing
+enterocolitis; paralytic ileus; volvulus; malnutrition and malabsorption, including
+  lactose intolerance, short bowel syndrome</i><br>
+<i>rectum and anus: abscess of anal and rectal regions; anal fissure; anal fistula; ulcer;
+fecal incontinence; hemorrhage (rectum, anus); proctitis; hemorrhoids; rectal
+  prolapse</i><br>
+<b>Disorders of the liver and biliary system, noninfectious
+  liver</b><br>
+  <i>cirrhosis; Dubin-Johnson, Rotor syndromes; end-stage liver disease, including
+indications for transplantation; Gilbert syndrome, Crigler-Najjar syndrome; hepatic
+coma/hepatic encephalopathy; hepatitis, noninfectious; hepatitis, fatty liver,
+alcoholic; hepatorenal syndrome; hepatopulmonary syndrome; jaundice; nonalcoholic fatty liver disease; portal hypertension/esophageal varices
+biliary system: bile duct obstruction/cholestasis; cholangitis, including ascending;
+choledocholithiasis; cholelithiasis/cholecystitis; cholestasis due to parenteral
+nutrition; gallstone ileus; Mirizzi syndrome; primary biliary cirrhosis; primary
+    sclerosing cholangitis</i><br>
+  <b>Disorders of the pancreas</b><br>
+  <i>pancreatitis, acute; pancreatitis, chronic; pancreatitis,
+hereditary; pancreatic cyst/pseudocyst; pancreatic duct obstruction; pancreatic
+    insufficiency</i><br>
+  <b>Disorders of the peritoneal cavity: ascites</b><br>
+  <b>Traumatic and mechanical disorders</b><br>
+  <i>abdominal wall defects; adhesions, postsurgical;
+digestive system complications of surgery; post-gastric surgery syndromes (eg, blind loop
+syndrome, adhesions); duodenal tear; foreign body in digestive system; inguinal, femoral,
+and abdominal wall hernias; open wound, abdominal; perforation of hollow viscus and
+blunt trauma; perforation/rupture of esophagus (Boerhaave syndrome); umbilical hernia
+Congenital disorders: annular pancreas, biliary atresia, cleft lip and palate, esophageal
+atresia, malrotation without volvulus, Meckel diverticulum, pyloric stenosis,
+    tracheoesophageal fistula</i><br>
+  <b>Adverse effects of drugs on the gastrointestinal system</b><br>
+  <i>drug-induced changes in motility
+(chronic laxative abuse, opioids); drug-induced gastritis, duodenitis, peptic ulcer disease
+(NSAIDs); drug-induced hepatitis (eg, acetaminophen, isoniazid); drug-induced
+    pancreatitis (eg, thiazide diuretics)</i><br>
 </body>
 </html>
