--- a/genitourinary.html
+++ b/genitourinary.html
@@ -57,5 +57,66 @@ Answer: <p style="color:white"> Untreated gonorrhea can cause PID in women and e
 <Br>
 <b>Laboratory Test Findings and Diagnostic Imaging Related to the Genitourinary/Renal System and Breasts</b>
 <br>
+  <h2>Normal Processes</h2><br>
+  <b>Embryonic development, fetal maturation, and perinatal changes</b><br>
+  <b>Organ structure and function</b><br>
+  <i>kidneys, ureters, bladder, urethra</i><br>
+  <i>glomerular filtration and hemodynamics</i><br>
+  <i>urine concentration and dilution</i><br>
+  <b>renal mechanisms in acid-base balance</b><br>
+  <b>renal mechanisms in body fluid homeostasis</b><br>
+  <b>micturition</b><br>
+  <b>Cell/tissue structure and function</b><br>
+  <i>renal metabolism and oxygen consumption</i><br>
+  <i>tubular reabsorption and secretion, including transport processes and proteins</i><br>
+<i>hormones produced by or acting on the kidney (eg, renin, aldosterone, angiotensin II,
+  vasopressin)</i><br>
+  <b>Repair, regeneration, and changes associated with stage of life</b><br>
+<h2>Abnormal Processes: Health and Health Maintenance, Screening, Diagnosis, Management, Risks, Prognosis</h2><br>
+  <h3>Infectious, immunologic, and inflammatory disorders</h3><br>
+  <b>Infectious disorders</b><br>
+<i>Upper urinary tract: granulomatous pyelonephritis; perinephric abscess;
+  pyelonephritis; pyonephrosis; renal abscess; renal tuberculosis</i><br>
+<i>Lower urinary tract and urinary tract infections of unspecified location: cystitis;
+  chlamydial and nonchlamydial</i><br>
+  <b>Immunologic and inflammatory disorders</b><br>
+  <i>Upper urinary tract</i><br>
+<i>glomerular disorders: Alport syndrome; glomerular disease due to hepatitis
+B, C; glomerulonephritis, including poststreptococcal; IgA nephropathy;
+lupus nephritis; minimal change disease; nephrotic syndrome; thin
+  basement membrane disease</i><br>
+<i>tubular interstitial disease: acute tubular necrosis (ATN); acute
+  interstitial nephritis; papillary necrosis; HIV nephropathy</i><br>
+  <i>Lower urinary tract: interstitial cystitis</i><br>
+  <b>Neoplasms</b>
+  <i>Benign neoplasms and cysts: polycystic kidney disease</i><br>
+<i>malignant neoplasms: renal (eg, Wilms tumor/nephroblastoma, renal cell carcinoma,
+renal tumors associated with congenital/hereditary conditions); urinary bladder and
+  collecting system</i><br>
+  <b>Signs, symptoms, and ill-defined disorders</b><br>
+  <i>dysuria; hematuria; oliguria, anuria; proteinuria</i><br>
+  <b>Metabolic and regulatory disorders</b><br>
+  <i>acute kidney injury; renal insufficiency; azotemia,
+uremic syndrome; chronic kidney disease, including end-stage renal disease;
+cystinuria; Fanconi syndrome; hypertensive renal disease (renal complications of
+    hypertension); renal calculi, ureteral calculi, nephrolithiasis; renal tubular acidosis</i><br>
+  <b>Vascular disorders</b><br>
+  <i>renal artery stenosis (atherosclerosis, fibromuscular dysplasia,
+    nephrosclerosis); renal vein thrombosis; renal infarction</i><br>
+  <b>Traumatic and mechanical disorders</b><br>
+  <i>bladder rupture; neurogenic bladder; obstructive
+uropathy; posterior urethral valves; renal laceration; renal vascular injury; ureteral
+laceration/avulsion/disruption; urethral diverticulum; urethral/ureteral
+obstruction/stricture/prolapse; urinary incontinence, including secondary enuresis;
+    vesicoureteral reflux</i><br>
+  <b>Congenital disorders</b><br>
+  <i>double ureters/ureteral duplication/double collecting system;
+horseshoe kidney; hydronephrosis/reflux; renal agenesis, renal hypoplasia, renal
+    dysplasia; single kidney</i><br>
+  <b>Adverse effects of drugs on the renal and urinary system</b><br>
+  <i>ACE inhibitors; aminoglycosides;
+amphotericin B; cisplatin; furosemide; gadolinium (nephrogenic systemic fibrosis);
+heroin; iodinated contrast dye; lithium; NSAIDs; penicillins; sulfa drugs; tenofovir; drug-
+    induced urinary retention</i><br>
 </body>
 </html>
