--- a/gastrointestinal.html
+++ b/gastrointestinal.html
@@ -40,7 +40,7 @@
 <b>Laboratory Test Findings and Diagnostic Imaging Related to the Gastrointestinal System and Nutritional Health</b>
 <br>
   <h2>Normal Processes</h2><br>
-<b>Embryonic development, fetal maturation, and perinatal changes<b><br>
+<b>Embryonic development, fetal maturation, and perinatal changes</b><br>
   <b>Organ structure and function</b><br>
 <i>anatomy of the alimentary canal, including mouth, pharynx, esophagus, stomach, small
   intestine, large intestine, anus, peritoneal cavity</i><br>
