--- a/genitourinary.html
+++ b/genitourinary.html
@@ -118,5 +118,120 @@ horseshoe kidney; hydronephrosis/reflux; renal agenesis, renal hypoplasia, renal
 amphotericin B; cisplatin; furosemide; gadolinium (nephrogenic systemic fibrosis);
 heroin; iodinated contrast dye; lithium; NSAIDs; penicillins; sulfa drugs; tenofovir; drug-
     induced urinary retention</i><br>
+  <h2>Normal Processes</h2><br>
+<b>Embryonic development, fetal maturation, and perinatal changes, gametogenesis</b><br>
+  <b>Organ structure and function</b><br>
+  <i>female structure, including breast</i><br>
+  <i>female function (eg, ovulation, menstrual cycle, puberty)</i><br>
+  <i>intercourse, sexual response</i><br>
+<b>Cell/tissue structure and function<b>
+  <i>hypothalamic-pituitary-gonadal axis, sex steroids,
+    and gestational hormones</i><br>
+  <b>Reproductive system defense mechanisms and normal flora</b><br>
+  <b>Repair, regeneration, and changes associated with stage of life</b><br>
+<h2>Abnormal Processes: Health and Health Maintenance, Screening, Diagnosis,
+  Management, Risks, Prognosis</h2><br>
+  <h3>Breast</h3><br>
+  <b>Infectious, immunologic, and inflammatory disorders</b><br>
+  <i>breast abscess, inflammatory
+    disease of breast, fat necrosis; mastitis; nipple discharge</i><br>
+<b>Neoplasms<b>
+  <i>Benign and undefined neoplasms</i><br>
+  <i>breast cyst, solitary; fibrocystic changes;
+    fibroadenoma; hypertrophy of breast; intraductal papilloma</i><br>
+  <b>malignant neoplasms (including screening)</b><br>
+  <i>breast cancer; intraductal carcinoma; Paget disease of breast; phyllodes tumors</i><br>
+  <h3>Female reproductive system</h3>
+  <b>Infectious, immunologic, and inflammatory disorders</b><br>
+  <i>bacterial vaginosis; Bartholin gland
+abscess; cellulitis, pelvic; candidiasis of the vulva or vagina; lichen sclerosus; sexually
+transmitted infections and exposure; cervicitis and endocervicitis; chancroid
+(Haemophilus ducreyi); genital herpes; gonorrhea (Neisseria gonorrhoeae); human
+papillomavirus infection, genital/venereal/anal warts, condylomata acuminata;
+lymphogranuloma venereum (Chlamydia trachomatis), non-lymphogranuloma
+venereum; pelvic inflammatory disease; Fitz-Hugh–Curtis syndrome; salpingitis and
+oophoritis; syphilis (Treponema pallidum); trichomoniasis (Trichomonas vaginalis);
+    urethritis; vaginitis; vulvovaginitis</i><br>
+  <b>Neoplasms of the cervix, ovary, uterus, vagina, and vulva</b><br>
+  <i>Benign neoplasms and cysts</i><br>
+  <i>abnormal Pap smear; benign neoplasm of ovary;
+endocervical and endometrial polyps; leiomyomata uteri; ovarian cyst
+malignant and precancerous neoplasms: cervical cancer; HPV causing cancer; cervical
+dysplasia, HPV causing dysplasia; endometrial hyperplasia; endometrial/uterine
+cancer; gestational trophoblastic disease (hydatidiform mole); ovarian cancer;
+    vulvar dysplasia and cancer</i><br>
+  <b>Fertility and infertility</b><br>
+  <i>Assisted reproductive techniques (ART); contraception (eg, oral
+contraceptives, IUD, vaginal cap, cervical sponge, diaphragm, implant, morning-after
+pill, male and female condoms); female infertility; gonadal dysgenesis 45,X (Turner
+    syndrome); sterilization; tubal factors; infertility</i><br>
+  <b>Menopause</b><br>
+  <i>ovarian failure, premature menopause; perimenopause; premenopausal
+menorrhagia; postmenopausal atrophic vaginitis (vaginal atrophy); postmenopausal
+    bleeding; vasomotor symptoms</i><br>
+  <b>Menstrual and endocrine disorders</b><br>
+  <i>abnormal uterine bleeding, including
+perimenopausal; absence of menstruation (primary amenorrhea, secondary
+amenorrhea including undiagnosed pregnancy); anovulation; dysmenorrhea;
+endometriosis; hirsutism, virilization; mittelschmerz; pelvic pain; polycystic ovarian
+    syndrome; postcoital bleeding; premenstrual syndrome</i><br>
+  <b>Sexual dysfunction</b><br>
+  <i>dyspareunia; orgasmic dysfunction; sexual desire/arousal
+    syndrome; vaginismus</i><br>
+  <b>Traumatic and mechanical disorders</b><br>
+  <i>Asherman syndrome; chronic inversion of uterus;
+chronic pelvic pain syndrome; cystocele; imperforate hymen; injuries, wounds, and burns
+affecting the female reproductive system and injuries, wounds, burns, and blast injuries;
+ovarian torsion; pelvic relaxation; prolapse, vaginal walls, uterine, uterovaginal; rectocele;
+    urethrocele</i><br>
+  <b<Congenital disorders</b><br>
+  <i>müllerian agenesis; uterus didelphys, bicornuate uterus; short cervix</i><br>
+  <b>Adverse effects of drugs on the female reproductive system and breast</b><br>
+  <i>antihistamines,
+H2-receptor blockers; benzodiazepines; beta-adrenergic blockers; hormone
+replacement; opioids; spironolactone; selective serotonin reuptake inhibitors;
+    tricyclic antidepressants</i><br>
+  <h2>Normal Processes</h2>
+  <b>Embryonic development, fetal maturation, and neonatal changes, gametogenesis</b><br>
+  <b>Organ structure and function</b><br>
+  <i>structure, male genitalia and prostate</i><br>
+  <i>function, male genitalia and prostate (eg, spermatogenesis, puberty)</i><br>
+  <i>intercourse, orgasm, erection</i><br>
+  <b>Cell/tissue structure and function</b><br>
+  <i>including hypothalamic-pituitary-gonadal axis, sex
+    steroids, and gestational hormones</i><br>
+  <b>Reproductive system defense mechanisms and normal flora</b><br>
+  <b>Repair, regeneration, and changes associated with stage of life</b><br>
+<h2>Abnormal Processes: Health and Health Maintenance, Screening, Diagnosis,
+  Management, Risks, Prognosis</h2><br>
+  <h3>Infectious, immunologic, and inflammatory disorders</h3><br>
+  <b>Infectious disorders</b><br>
+  <i>balanitis; epididymitis; orchitis; prostatitis; sexually transmitted
+infections and exposure; chancroid (Haemophilus ducreyi); genital herpes; gonorrhea
+(Neisseria gonorrhoeae); human papillomavirus infection, genital/venereal/anal
+warts, condylomata acuminata; lymphogranuloma venereum (Chlamydia
+trachomatis); syphilis (Treponema pallidum); trichomoniasis (Trichomonas vaginalis);
+    urethritis, chlamydial and nonchlamydial, nongonococcal</i><br>
+  <b>immunologic and inflammatory disorders</b><br>
+  <i>autoimmune hypogonadism</i>
+  <b>Neoplasms</b><br>
+  <i>malignant neoplasms, penile, prostate, testicular, breast</i><br>
+  <b>Metabolic and regulatory disorders, including sexual dysfunction</b><br>
+  <i>erectile dysfunction,
+    impotence; infertility, male factor; male sexual dysfunction; premature ejaculation</i><br>
+  <b>Traumatic and mechanical disorders</b><br>
+  <i>benign prostatic hyperplasia/hypertrophy; circumcision,
+including complications; epididymal cyst; hydrocele; injuries, wounds, and burns to male
+genitalia, including blast injuries; penile laceration, penile fracture, Peyronie disease;
+phimosis; scrotal laceration; spermatocele; testicular rupture/avulsion/laceration; torsion
+    of testis; urethral laceration/disruption; varicocele</i><br>
+  <b>Congenital disorders of the male reproductive system</b><br>
+  <i>hypospadias; Klinefelter syndrome;
+    undescended testicle</i><br>
+  <b>Adverse effects of drugs on the male reproductive system</b><br>
+  <i>alcohol; androgens, testosterone;
+antipsychotics, antidepressants including selective serotonin reuptake inhibitors; betaadrenergic blockers; diuretic including thiazides; drug-induced priapism (eg, trazodone);
+finasteride, dutasteride; sildenafil, tadalafil, vardenafil; marijuana; nitric oxide reductase
+    inhibitors</i><br>
 </body>
 </html>
