--- a/endocrine.html
+++ b/endocrine.html
@@ -3,19 +3,80 @@
 <title>Endocrine System and Metabolism</title>
 </head>
 <body>
-<h1>Endocrine System and Metabolism</h1>
+  <h1><center>Endocrine System and Metabolism</center></h1>
 <br>
-Abnormalities of Weight and Stature; Obesity
+  <b>Abnormalities of Weight and Stature; Obesity</b>
 <br>
-Endocrine and Neck Masses
+  <b>Endocrine and Neck Masses</b>
 <br>
-Hypothermia and Hyperthermia
+  <b>Hypothermia and Hyperthermia</b>
 <br>
-Polyuria, Polydipsia, Polyphagia; Diabetes Mellitus
+  <b>Polyuria, Polydipsia, Polyphagia; Diabetes Mellitus</b>
 <br>
-Physical Exam Findings Related to the Endocrine System And Metabolism
+  <b>Physical Exam Findings Related to the Endocrine System And Metabolism</b>
 <br>
-Laboratory Test Findings and Diagnostic Imaging Related to the Endocrine System And Metabolism
+<b>Laboratory Test Findings and Diagnostic Imaging Related to the Endocrine System And Metabolism</b>
 <br>
+  <h2>Normal Processes</h2><br>
+  <b>Embryonic development, fetal maturation, and perinatal changes</b><br>
+  <b>Organ structure and function</b><br>
+  <i>hypothalamus, posterior and anterior pituitary gland</i><br>
+  <i>thyroid gland</i><br>
+  <i>parathyroid gland</i><br>
+  <i>adrenal cortex, adrenal medulla</i><br>
+  <i>pancreatic islets</i><br>
+  <i>ovary and testis</i><br>
+  <i>adipose tissue</i><br>
+<b>Cell/tissue/structure and function including hormone synthesis, secretion, action,
+  metabolism</b><br>
+  <i>peptide hormones</i><br>
+  <i>steroid hormones, including vitamin D</i><br>
+  <i>thyroid hormones</i><br>
+  <i>catecholamine hormones</i><br>
+  <i>renin-angiotensin system</i><br>
+  <b>Repair, regeneration, and changes associated with stage of life</b><br>
+<h2>Abnormal Processes: Health and Health Maintenance, Screening, Diagnosis,
+  Management, Risks, Prognosis</h2></br>
+  <b>Diabetes mellitus and other disorders of the endocrine pancreas</i><br>
+<i>diabetes mellitus: diabetes mellitus, type 1; diabetes mellitus, type 1.5; diabetes mellitus,
+type 2; diabetes mellitus, acute complications: hyperosmolar coma, hypoglycemic shock,
+ketoacidosis, including cerebral edema, associated electrolyte abnormalities; diabetes
+mellitus, chronic complications: gastrointestinal/gastroparesis, neurologic/neuropathy,
+ophthalmologic/retinopathy, peripheral vascular, renal/nephropathy, metabolic
+  syndrome</i><br>
+<i>hypoglycemia and islet cell disorders: hypoglycemia (secondary to insulinoma,
+surreptitious insulin use, sepsis, liver failure); hyperglycemia (secondary to
+  glucagonoma); hyperinsulinism; islet cell</i><br>
+  <b>tumors/insulinoma/somatostatinoma; pancreatic neuroendocrine tumors</b><br>
+  <b>Thyroid disorders</b><br>
+  <i>cyst, nodule; euthyroid sick syndrome; goiter (euthyroid-normal thyroid
+function with goiter); hypothyroidism; hyperthyroidism, including thyrotoxicosis and
+thyroid storm; thyroiditis, including Hashimoto; Graves disease; neoplasms (benign cysts
+and nodules, thyroid cancer including papillary, follicular, medullary, and anaplastic);
+thyroid deficiency from pituitary disorder; infertility due to thyroid disease; secondary
+    hypothyroidism and hyperthyroidism</i><br>
+  <b>Parathyroid disorders</b><br>
+  <i>hyperparathyroidism; hypoparathyroidism; metabolic bone disease</i><br>
+  <b>Adrenal disorders</b><br>
+  <i>corticoadrenal insufficiency (Addison disease); adrenal insufficiency,
+secondary; hypocortisolism; Cushing syndrome; hyperaldosteronism; neoplasms,
+benign and malignant (adrenal neuroblastoma, pheochromocytoma, adrenal
+carcinoma, adrenal adenoma, aldosteronoma, adrenal incidentaloma); delayed and
+    precocious puberty; hypertensive endocrine disease</i><br>
+  <b>Pituitary disorders</b><br>
+  <i>acromegaly/gigantism; diabetes insipidus; galactorrhea not associated
+with childbirth; panhypopituitarism from any cause; pituitary apoplexy (eg, Sheehan
+syndrome); growth hormone deficiency; short stature; SIADH (inappropriate secretion of
+ADH [vasopressin]); neoplasm, benign and malignant (pituitary adenomas,
+craniopharyngioma, metastatic disease); prolactinoma and hyperprolactinemia, including
+infertility due to these disorders; hypogonadism, primary and secondary</i><br>
+  <b>Hypothalamic endocrine disorders</b><br>
+  <b>Multiple endocrine neoplasia (MEN1, MEN2)</b><br>
+  <b>Congenital disorders</b><br>
+  <i>disorders of sexual differentiation; congenital adrenal hyperplasia;
+    androgen insensitivity/resistance syndrome; congenital hypothyroidism</i><br>
+  <b>Adverse effects of drugs on the endocrine system</b><br>
+  <i>drug, medicinal, and biologic substance
+    effects; exogenous steroid suppression of adrenal glands, anabolic steroids </i><br>
 </body>
 </html>
