--- a/nutrition.html
+++ b/nutrition.html
@@ -3,6 +3,17 @@
 <title>Nutrition</title>
 </head>
 <body>
-<h1><center>Nutrition</center></h1>
+<h1><center>Nutrition</center></h1><br>
+  <h2>Normal Processes</h2><br>
+  <b>Principles of nutrition</b><br>
+<i>generation, expenditure, and storage of energy at the whole-body level
+  functions of nutrients (eg, essential, trans-fatty acids, cholesterol)</i><br>
+  <b>Electrolyte and water metabolism </b><br>
+  <i>electrolyte metabolism (calcium, potassium, phosphorus)</i><br>
+  <i>water metabolism</i><br>
+  <b>Intracellular accumulations</b><br>
+  <i>(eg, pigments, fats, proteins, carbohydrates, minerals,
+inclusions, vacuoles, lysosomal/glycogen storage disease and structures related to
+    storage diseases, glycogen phosphorylase deficiency, Zellweger syndrome) </i><br>
 </body>
 </html>
