--- a/microbiology.html
+++ b/microbiology.html
@@ -9,20 +9,32 @@
   Microbial identification and classification, including principles, microorganism identification, and non-immunologic laboratory diagnosis<br>
   <b>Bacteria</b><br>
   <i>Structure (eg, cell walls, composition, appendages, virulence factors, extracellular products, toxins, mechanism of action of toxins)</i><br>
+  <i>Diseases: brucellosis (Brucella spp); leptospirosis (Leptospira interrogans); Lyme disease
+(Borrelia burgdorferi); melioidosis (Burkholderia pseudomallei); miliary
+(disseminated) tuberculosis (Mycobacterium tuberculosis); tularemia (Francisella
+tularensis); toxic shock syndrome; Q fever (Coxiella burnetii); anaplasmosis and
+ehrlichiosis (Anaplasma and Ehrlichia species); rickettsiosis (Rocky Mountain
+    spotted fever [Rickettsia rickettsii])</i><br>
   <i>Processes, replication, and genetics (eg, metabolism, growth, and regulation)</i><br>
   <i>Oncogenesis</i><br>
 <i>Antibacterial agents (eg, mechanisms of action on organism, toxicity to humans, and mechanisms of resistance)</i><br>
     <b>Viruses</b><br>
-  <i>Structure (eg, physical and chemical properties, virulence factors)</i>
+  <i>Structure (eg, physical and chemical properties, virulence factors)</i><br>
+  <i>Diseases:  infectious mononucleosis (Epstein-Barr virus); cytomegalovirus infection; yellow
+    fever; human herpesvirus 8 (HHV-8)</i><br>
   <i>Processes, replication, and genetics (eg, life cycles, location of virus in latent infection)</i><br>
   <i>Oncogenesis</i><br>
 <i>Antiviral agents (eg, mechanisms of action on virus, toxicity to humans, and mechanisms of resistance)</i><br>
 <b>Fungi</b><br>
 <i>Structure (eg, cell wall, composition, appendages, virulence factors, extracellular products, toxins, mechanisms of action of toxins)</i><br>
+  <i>Diseases: blastomycosis (Blastomyces dermatitidis); candidiasis (Candida albicans);
+coccidioidomycosis (Coccidioides immitis/posadasii); histoplasmosis (Histoplasma
+    capsulatum) </i><br>
   <i>Processes, replication, and genetics (eg, asexual vs. sexual, metabolism, growth)</i><br>
 <i>Antifungal agents (eg, mechanisms of action on fungus, toxicity to humans, and mechanisms of resistance)</i><br>
   <b>Parasites</b><br>
   <i>Structure (eg, appendages, macroscopic features, and virulence factors)</i><br>
+  <i>Diseases:  schistosomiasis (Schistosoma); leishmaniasis (Leishmania spp), visceral (kalaazar); trypanosomiasis/Chagas disease, acute and chronic (Trypanosoma) </i><br>
   <i>Processes, replication, and genetics (eg, life cycles, metabolism, and growth)</i><br>
   <i>Oncogenesis</i>
 <i>Antiparasitic agents (eg, mechanisms of action on parasite, toxicity to humans, and mechanisms of resistance)</i><br>
