--- a/immunology.html
+++ b/immunology.html
@@ -37,6 +37,16 @@ expressed on the surface; including distribution of MHC I and MHC II on differen
   <b>Immunologically mediated disorders</b><br>
 <i>hypersensitivity reactions: type 1, 2, 3, including anaphylaxis; type 4; drug reactions; serum sickness</i><br>
   <i> transplantation: rejection; graft-vs-host disease</i><br>
+  <i>acute rheumatic fever; autoimmune
+arteritis/vasculitis; Behçet syndrome; Churg-Strauss syndrome; eosinophilic
+granuloma, histiocytosis, Langerhans cell histiocytosis; Goodpasture syndrome;
+Henoch-Schönlein purpura; Kawasaki disease; mixed connective tissue disease;
+polyangiitis; polyarteritis nodosa; polyglandular autoimmune syndrome, type 1;
+polymyalgia rheumatica, temporal arteritis; Raynaud disease/Raynaud syndrome;
+reactive arthritis, formerly Reiter disease, including Reiter arthritis; scleroderma
+(systemic sclerosis); Sjögren syndrome; systemic lupus erythematosus; Takayasu
+arteritis; granulomatosis with polyangiitis (formerly Wegener granulomatosis);
+    familial Mediterranean fever; sarcoidosis, Lofgren syndrome </i><br>
   <b>Adverse effects of drugs on the immune system</b><br>
   <i>Jarisch-Herxheimer reaction; drugs affecting the immune system (eg, prednisone, azathioprine, cyclosporine, methotrexate, monoclonal antibody drugs [eg, abciximab, adalimumab; bevacizumab, infliximab, omalizumab, rituximab]); vaccine adverse effects</i><br>
 </body>
