--- a/pathology.html
+++ b/pathology.html
@@ -3,6 +3,17 @@
 <title>Pathology</title>
 </head>
 <body>
-<h1><center>Pathology</center></h1>
+<h1><center>Pathology</center></h1><br>
+  <b>Paraneoplastic syndromes</b> 
+  <i>Endocrine (eg, SIADH, Cushing syndrome, hypercalcemia of
+malignancy [parathyroid‐related protein and paraneoplastic syndrome with
+hypercalcemia]); hematologic (polycythemia, nonbacterial thrombotic endocarditis);
+neurologic (myasthenic syndrome, paraneoplastic cerebellar degeneration, limbic
+encephalitis, pure sensory neuropathy, anti-NMDA receptor encephalitis);
+mucocutaneous (eg, acanthosis nigricans); musculoskeletal (eg, pulmonary
+    osteoarthropathy, polymyositis); other (membranous glomerulonephritis)</i><br>
+    <b>Inherited cancer syndromes</b><br>
+    <i>DNA repair abnormalities (eg, Fanconi anemia); Lynch
+    syndrome (gastrointestinal and female reproductive)</i><br>
 </body>
 </html>
