--- a/OPCPS.html
+++ b/OPCPS.html
@@ -5,7 +5,13 @@
 <body>
 <h1><center>Osteopathic Patient Care and Procedural Skills</center></h1>
 <br>
-<h2>Data Gathering</h2>
+<h2>Data Gathering</h2><br>
+  <b>Signs, symptoms, and ill-defined disorders</b><br>
+  <i>arthralgias; abdominal pain; chest pain; cough;
+dizziness, light-headedness, syncope, including breath-holding spells with syncope;
+dyspnea, shortness of breath; edema, anasarca; fatigue; fever of unknown origin;
+hemoptysis; pain management (in a nonaddiction, nonpalliative-care setting); joint pain;
+    lymphedema; palpitations; pruritus; unexpected weight gain/weight loss </i><br>
 <br>
 <h2>Differential Diagnosis</h2>
 <br>
