--- a/nutrition.html
+++ b/nutrition.html
@@ -6,8 +6,9 @@
 <h1><center>Nutrition</center></h1><br>
   <h2>Normal Processes</h2><br>
   <b>Principles of nutrition</b><br>
-<i>generation, expenditure, and storage of energy at the whole-body level
-  functions of nutrients (eg, essential, trans-fatty acids, cholesterol)</i><br>
+  <i>generation, expenditure, and storage of energy at the whole-body level</i><br>
+  <i>functions of nutrients (eg, essential, trans-fatty acids, cholesterol)</i><br>
+  <i>protein-calorie malnutrition (kwashiorkor, marasmus)</i><br>
   <b>Electrolyte and water metabolism </b><br>
   <i>electrolyte metabolism (calcium, potassium, phosphorus)</i><br>
   <i>water metabolism</i><br>
@@ -15,5 +16,13 @@
   <i>(eg, pigments, fats, proteins, carbohydrates, minerals,
 inclusions, vacuoles, lysosomal/glycogen storage disease and structures related to
     storage diseases, glycogen phosphorylase deficiency, Zellweger syndrome) </i><br>
+  <b>vitamin deficiencies and/or toxicities</b><br>
+  <i>vitamin A; vitamin B; vitamin B1, thiamine (eg,
+Wernicke- Korsakoff syndrome, beriberi); vitamin B3, niacin; vitamin B6, pyridoxine;
+vitamin B9, folic acid; vitamin B12, cobalamins (pernicious anemia); vitamin C
+    (scurvy); vitamin D (rickets); vitamin E; vitamin K</i><br>
+  <b>mineral deficiencies and/or toxicities</b><br>
+  <b>obesity</b><br>
+  <b>enteral/parenteral nutrition (TPN)</b><br>
 </body>
 </html>
