--- a/pathology.html
+++ b/pathology.html
@@ -15,5 +15,22 @@ mucocutaneous (eg, acanthosis nigricans); musculoskeletal (eg, pulmonary
     <b>Inherited cancer syndromes</b><br>
     <i>DNA repair abnormalities (eg, Fanconi anemia); Lynch
     syndrome (gastrointestinal and female reproductive)</i><br>
+  <b>Toxins and environmental extremes</b><br>
+  <i>Physical and associated disorders</i><br>
+  <i>temperature (eg, hypothermia, hyperthermia, heat stroke)</i><br>
+  <i>radiation (eg, radon, uranium mining, imaging studies)</i><br>
+  <i>thermal injury, burns, electrocution, lightning</i><br>
+  <i>decreased atmospheric pressure, high-altitude sickness</i><br>
+  <i>increased water pressure (nitrogen narcosis)</i><br>
+  <i>Chemical including Gulf War illness</i><br>
+  <i>gases, vapors, smoke inhalation</i><br>
+<i>agricultural hazards (eg, pesticides, green tobacco poisoning, anhydrous ammonia,
+  Agent Orange)</i><br>
+  <i>volatile organic solvents</i><br>
+  <i>metals (eg, lead)</i><br>
+  <i>other chemical agents (eg, ethylene glycol, carbon tetrachloride, methanol; BPA)</i><br>
+  <b>principles of poisoning and therapy (eg, acetylsalicylic acid [ASA], acetaminophen)</b><br>
+<i>Venomous bites and stings: hymenoptera bites and stings; scorpion bites; snake bites; spider
+  bites; jellyfish stings</i><br>
 </body>
 </html>
