--- a/genitourinary.html
+++ b/genitourinary.html
@@ -118,6 +118,13 @@ horseshoe kidney; hydronephrosis/reflux; renal agenesis, renal hypoplasia, renal
 amphotericin B; cisplatin; furosemide; gadolinium (nephrogenic systemic fibrosis);
 heroin; iodinated contrast dye; lithium; NSAIDs; penicillins; sulfa drugs; tenofovir; drug-
     induced urinary retention</i><br>
+  <b>Fluid, electrolyte, and acid-base balance disorders</b><br>
+<i>fluid volume and electrolyte/ion disorders: fluid volume disorders; dehydration;
+hypovolemia; volume overload; electrolyte disorders; hyponatremia, hypernatremia;
+hypokalemia, hyperkalemia; hypocalcemia, hypercalcemia; hypophosphatemia,
+  hyperphosphatemia; hypomagnesemia</i><br>
+<i>acid-base disorders: metabolic acidosis; metabolic alkalosis; respiratory acidosis;
+  respiratory alkalosis; mixed acid-base disturbances</i><br>
   <h2>Normal Processes</h2><br>
 <b>Embryonic development, fetal maturation, and perinatal changes, gametogenesis</b><br>
   <b>Organ structure and function</b><br>
