--- a/behavioral.html
+++ b/behavioral.html
@@ -32,5 +32,12 @@
   <i>Gender dysphoria; psychosexual dysfunction</i><br>
   <b>Substance use disorders</b><br>
   <i>Alcohol use disorder/intoxication/dependence/withdrawal; tobacco/nicotine use disorder/dependence/withdrawal; varenicline use; cannabis use disorder/intoxication/dependence; hallucinogen use disorder/intoxication/dependence/withdrawal; inhalant use disorder/intoxication/dependence/withdrawal; opioid, heroin, including prescription drug, use disorder/intoxication/dependence/withdrawal; sedative, hypnotic, including benzodiazepine and barbiturate use disorder/intoxication/dependence/withdrawal; stimulant, cocaine, methamphetamine use disorder/intoxication/dependence/withdrawal; other drugs of use disorders (eg, ecstasy, PCP, bath salts)/intoxication/dependence/withdrawal; polysubstance use disorder/intoxication/dependence/withdrawal</i><br>
-</body>
+  <b>Abuse</b><br>
+  <i>child, nonaccidental trauma/inflicted head trauma/factitious disorder by proxy
+intimate partner abuse, sexual, emotional, and physical including injuries (eg, rib
+    fractures) related to abuse</i><br>
+<i>elder abuse, sexual, emotional, and physical including injuries (eg, rib fractures)
+  related to abuse</i><br>
+  <i>sexual assault</i><br>
+  </body>
 </html>
