--- a/OPCPS.html
+++ b/OPCPS.html
@@ -13,7 +13,10 @@ dyspnea, shortness of breath; edema, anasarca; fatigue; fever of unknown origin;
 hemoptysis; pain management (in a nonaddiction, nonpalliative-care setting); joint pain;
     lymphedema; palpitations; pruritus; unexpected weight gain/weight loss </i><br>
 <br>
-<h2>Differential Diagnosis</h2>
+<h2>Differential Diagnosis</h2><br>
+  <i>Shock, cardiogenic, hypovolemic, neurogenic, septic, sepsis, bacteremia, systemic
+inflammatory response syndrome (SIRS), refractory, multiorgan dysfunction
+    syndrome: meningococcemia</i><br>
 <br>
 <h2>Essential Clinical Procedures</h2>
 <br>
